fix vertical align menu

--- a/scss/_settings.scss
+++ b/scss/_settings.scss
@@ -400,7 +400,7 @@ $mediaobject-image-width-stacked: 100%;
 $menu-margin: 0;
 $menu-margin-nested: 1rem;
 // $menu-item-padding: 0.7rem 1rem;
-$menu-item-padding-top: 1.7rem;
+$menu-item-padding-top: 1.74rem;
 $menu-item-padding-side: 0.64rem;
 $menu-item-padding: $menu-item-padding-top $menu-item-padding-side;
 $menu-item-color-active: $white;
