--- a/scss/helpers.scss
+++ b/scss/helpers.scss
@@ -14,14 +14,15 @@
     color: $medium-gray;
 }
 
-.valign {
+.aligner-abs {
     position: relative;
     top: 50%;
     transform: translateY(-50%);
 }
 
-.valign-flex {
+.aligner-flex {
     display: flex;
+    flex-direction: row;
     align-items: center;
 }
 
@@ -31,6 +32,12 @@
 
 .text-bold {
     font-weight: bold;
+}
+
+.justifier {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
 .text-justify {
@@ -64,17 +71,25 @@
         left: -15px;
     }
 }
-::-webkit-input-placeholder { /* WebKit, Blink, Edge */
-    color:    #909;
+
+::-webkit-input-placeholder {
+    /* WebKit, Blink, Edge */
+    color: #909;
 }
-:-moz-placeholder { /* Mozilla Firefox 4 to 18 */
-   color:    #909;
-   opacity:  1;
+
+:-moz-placeholder {
+    /* Mozilla Firefox 4 to 18 */
+    color: #909;
+    opacity: 1;
 }
-::-moz-placeholder { /* Mozilla Firefox 19+ */
-   color:    #909;
-   opacity:  1;
+
+::-moz-placeholder {
+    /* Mozilla Firefox 19+ */
+    color: #909;
+    opacity: 1;
 }
-:-ms-input-placeholder { /* Internet Explorer 10-11 */
-   color:    #909;
+
+:-ms-input-placeholder {
+    /* Internet Explorer 10-11 */
+    color: #909;
 }
