--- a/scss/overrides/_menu.scss
+++ b/scss/overrides/_menu.scss
@@ -1,37 +1,34 @@
 .menu {
-    color: $white;
-    .menu__item {
-        vertical-align: baseline;
-        text-transform: uppercase;
-        a {
-            display: inline-block;
-            color: $white;
-        }
-        &.active > a {
-            border-bottom: 4px solid $pink;
-        }
-    }
-    &.menu_centered {
-        text-align: justify;
-        &:after {
-            content: '';
-            display: inline-block;
-            width: 100%;
-        }
-        > .menu__item {
-            display: inline-block;
-        }
-    }
-    &.menu_upper {
+    &.menu_top {
         position: absolute;
         width: 100%;
         z-index: 1;
     }
 }
 
-.site-name {
+.menu__item {
+    text-transform: uppercase;
+    a {
+        @include transition(all, 0.3s, ease-out);
+        display: inline-block;
+        color: $white;
+        &:hover {
+            color: lighten($purple, 10%);
+        }
+    }
+    &.active > a {
+        border-bottom: 4px solid $pink;
+    }
+}
+
+.logo {
+    @include transition(all, 0.5s, ease-out);
     font-size: 1.71rem;
     font-weight: bold;
     color: $white;
     text-transform: uppercase;
+    &:hover,
+    &:focus {
+        color: lighten($purple, 10%);
+    }
 }
